--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ httpx>=0.27.0
 chromadb>=0.4.22
 
 # Structured memory
-sqlalchemy>=2.0.0
+sqlalchemy[asyncio]>=2.0.0
 aiosqlite>=0.19.0
+greenlet>=3.0.0
 
 # Sandbox server
 fastapi>=0.109.0
