--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,22 +5,36 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "long-running-agents"
 version = "0.1.0"
-description = "AI agent system with Pydantic AI orchestration, sandbox API, and layered memory"
+description = "A Pydantic AI agent that remembers across sessions, can create its own tools, and delegates to specialists"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [{ name = "LongRunningAgents" }]
-keywords = ["ai", "agents", "pydantic-ai", "sandbox"]
+keywords = ["ai", "agents", "pydantic-ai", "sandbox", "memory"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
 
+dependencies = [
+    "pydantic-ai[openai]>=0.0.14",
+    "httpx>=0.27.0",
+    "chromadb>=0.4.22",
+    "sqlalchemy[asyncio]>=2.0.0",
+    "aiosqlite>=0.19.0",
+    "greenlet>=3.0.0",
+    "python-dotenv>=1.0.0",
+    "tenacity>=8.0.0",
+    "logfire>=0.1.0",
+    "sentence-transformers>=2.2.0",
+]
+
 [project.scripts]
-agent-cli = "cli:main"
+lra = "cli:main"
 
 [project.optional-dependencies]
 dev = [
@@ -32,7 +46,10 @@ dev = [
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["agents*", "tools*", "memory*", "schemas*", "sandbox*"]
+include = ["agents*", "tools*", "memory*", "schemas*", "sandbox*", "long_running_agents*"]
+
+[tool.setuptools]
+py-modules = ["config", "cli"]
 
 [tool.mypy]
 python_version = "3.11"
