--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 
+[project.urls]
+Homepage = "https://github.com/prith27/lra"
+Repository = "https://github.com/prith27/lra"
+
 dependencies = [
     "pydantic-ai[openai]>=0.0.14",
     "httpx>=0.27.0",
