--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "long-running-agents"
-version = "0.1.1"
+version = "0.1.2"
 description = "A Pydantic AI agent that remembers across sessions, can create its own tools, and delegates to specialists"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -53,7 +53,7 @@ where = ["."]
 include = ["agents*", "tools*", "memory*", "schemas*", "sandbox*", "long_running_agents*"]
 
 [tool.setuptools]
-py-modules = ["config", "cli"]
+py-modules = ["config", "cli", "cli_framework"]
 
 [tool.mypy]
 python_version = "3.11"
