--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "long-running-agents"
-version = "0.1.2"
+version = "0.1.3"
 description = "A Pydantic AI agent that remembers across sessions, can create its own tools, and delegates to specialists"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -54,6 +54,9 @@ include = ["agents*", "tools*", "memory*", "schemas*", "sandbox*", "long_running
 
 [tool.setuptools]
 py-modules = ["config", "cli", "cli_framework"]
+
+[tool.setuptools.package-data]
+"long_running_agents" = ["examples/*.md"]
 
 [tool.mypy]
 python_version = "3.11"
